css/sections/header.css
.header__nav {
    display: flex;
    overflow: hidden;
}

.header__logo {
    flex: 1;
    
    position: relative;
    padding: 20px;
}

.header__logo-overlay {
    position: absolute;
    inset: 0;
    width: 100%;
    background-color: var(--primary-color);
    z-index: -1;
}

.header__logo h4 {
    padding-left: 30px;

    color: #ffffff;
    font-weight: 700;
    font-size: 24px;
    text-transform: uppercase;
    font-family: var(--playfair-display);
    opacity: 0.9;
}

.header__menu,
.header__menu-mobile {
  padding: 20px;

  flex: 1.235;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 64px;

  list-style: none;
}

.header__menu li {
  font-weight: 500;
  font-size: 16px;
  line-height: 20px;
  text-transform: uppercase;
  font-family: var(--plus-jakarta-sans);
  color: var(--secondary-color);
  cursor: pointer;
}

.header__menu li img {
  width: 24px;
  height: 24px;
  object-fit: contain;
}

.header__menu-mobile {
  display: none;
  gap: 20px;

  position: relative;
}

